# rust-http-server

./: .nixpacks.toml  Cargo.toml  railway.toml
src/: handlers.rs  lib.rs  main.rs  schema.rs  utils.rs
